gap fix

--- a/styling/main.css
+++ b/styling/main.css
@@ -20,7 +20,6 @@ html {
 /* Styling */
 
 body {
-  width: 100%;
   min-height: 100vh;
   background: hsl(230, 100%, 99%);
   display: grid;
@@ -42,6 +41,12 @@ body {
   align-items: center;
   gap: 6.4rem;
   width: 100%;
+}
+
+@media screen and (min-width: 1000px) {
+  .card-wrapper {
+    gap: 9.1rem;
+  }
 }
 
 /* HEADER */
